max-encoded-len/tests/max_encoded_len_ui/union.stderr
error: Union types are not supported.
 --> $DIR/union.rs:5:1
  |
5 | union Union {
  | ^^^^^

error: Union types are not supported
 --> $DIR/union.rs:5:1
  |
5 | union Union {
  | ^^^^^
